--- a/ObjcAssociatedObjectHelpers.xcodeproj/xcshareddata/xcschemes/ObjcAssociatedObjectHelpers.xcscheme
+++ b/ObjcAssociatedObjectHelpers.xcodeproj/xcshareddata/xcschemes/ObjcAssociatedObjectHelpers.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "49AD1B6616C2838C0061BDC1"
                BuildableName = "ObjcAssociatedObjectHelpers.framework"
                BlueprintName = "ObjcAssociatedObjectHelpers"
-               ReferencedContainer = "container:ObjcAssociatedObjectHelpers.xcodeproj">
+               ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "49AEF1581619FB2C009D9F9B"
                BuildableName = "ObjcAssociatedObjectHelpersTests.xctest"
                BlueprintName = "ObjcAssociatedObjectHelpersTests"
-               ReferencedContainer = "container:ObjcAssociatedObjectHelpers.xcodeproj">
+               ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -49,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "49AD1B6616C2838C0061BDC1"
+            BuildableName = "ObjcAssociatedObjectHelpers.framework"
+            BlueprintName = "ObjcAssociatedObjectHelpers"
+            ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
