--- a/ObjcAssociatedObjectHelpers.xcodeproj/xcshareddata/xcschemes/ObjcAssociatedObjectHelpersLib.xcscheme
+++ b/ObjcAssociatedObjectHelpers.xcodeproj/xcshareddata/xcschemes/ObjcAssociatedObjectHelpersLib.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "49AD1B5516C282A10061BDC1"
                BuildableName = "libObjcAssociatedObjectHelpersLib.a"
                BlueprintName = "ObjcAssociatedObjectHelpersLib"
-               ReferencedContainer = "container:ObjcAssociatedObjectHelpers.xcodeproj">
+               ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "4918B9AD168498F000D4EAC4"
                BuildableName = "ObjcAssociatedObjectHelpersLibTests.xctest"
                BlueprintName = "ObjcAssociatedObjectHelpersLibTests"
-               ReferencedContainer = "container:ObjcAssociatedObjectHelpers.xcodeproj">
+               ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -49,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "49AD1B5516C282A10061BDC1"
+            BuildableName = "libObjcAssociatedObjectHelpersLib.a"
+            BlueprintName = "ObjcAssociatedObjectHelpersLib"
+            ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
