--- a/ObjcAssociatedObjectHelpers.xcodeproj/xcshareddata/xcschemes/ObjcAssociatedObjectHelpersLibTests.xcscheme
+++ b/ObjcAssociatedObjectHelpers.xcodeproj/xcshareddata/xcschemes/ObjcAssociatedObjectHelpersLibTests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -19,7 +19,7 @@
                BlueprintIdentifier = "4918B9AD168498F000D4EAC4"
                BuildableName = "ObjcAssociatedObjectHelpersLibTests.xctest"
                BlueprintName = "ObjcAssociatedObjectHelpersLibTests"
-               ReferencedContainer = "container:ObjcAssociatedObjectHelpers.xcodeproj">
+               ReferencedContainer = "container:../../../../dev/ToolKit/Modules/AtoZUniversal/Vendor/ObjcAssociatedObjectHelpers/ObjcAssociatedObjectHelpers.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
